[metadata]
name = PySide6-stubs
author = Philippe Fremy
author_email = phil.fremy@free.fr
description = PEP561 stub files for the *Qt for Python/PySide6* framework
long_description = file: README.md
long_description_content_type = text/markdown
version = 6.7.3.0
license = LGPL v2.1
url = https://github.com/python-qt-tools/PySide6-stubs
project_urls =
    Bug Tracker = https://github.com/python-qt-tool/pyside6-stubs/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Typing :: Stubs Only

[options]
zip_safe = False
package_dir =
   PySide6-stubs = PySide6-stubs
   shiboken6-stubs = shiboken6-stubs

python_requires = >=3.7
install_requires =
    mypy>=1.0
    PySide6>=6.0

[options.package_data]
* = *.pyi

[options.packages.find]
exclude =
    update_latest_pyside6.py


[options.extras_require]
dev =
    pytest